--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body{
 }
 .search{
     width: 100%;
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -48,5 +47,57 @@ body{
 }
 
 .search button img{
-    width: 16px;
+    width: 16px ;
+}
+
+.weather-icon{
+    width: 170px;
+    margin-top: 30px;
+}
+
+.weather h1{
+    font-size: 80px;
+    font-weight: 500;
+}
+
+.weather h2{
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+
+.details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.col img{
+    width: 40px;
+    margin-top: 10px;
+}
+
+.humidity, .wind{
+    font-size: 28px;
+    margin-top: -6px;
+}
+
+.weather{
+    display: none;
+}
+
+#invalid-city{
+    display: none;
+    font:bolder;
+    font-style: italic;
+    font-style: left;
+    color: red;
 }
